@@ -4,7 +4,7 @@
 '\" See the file "license.terms" for information on usage and redistribution
 '\" of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 '\"
-'\" RCS: @(#) $Id: class.n,v 1.1.2.3 2008/10/17 20:52:23 dgp Exp $
+'\" RCS: @(#) $Id: class.n,v 1.1.2.4 2009/08/24 19:34:05 dgp Exp $
 '\"
 .so man.macros
 .TH class n 0.1 TclOO "TclOO Commands"
@@ -69,7 +69,7 @@ method.
 .PP
 The \fBoo::class\fR class supports the following non-exported methods:
 .TP
-\fIobj \fBcreateWithNamespace\fI name nsName\fR ?\fIarg ...\fR?
+\fIcls \fBcreateWithNamespace\fI name nsName\fR ?\fIarg ...\fR?
 .
 This creates a new instance of the class \fIcls\fR called \fIname\fR (which is
 resolved within the calling context's namespace if not fully qualified),
